--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "lab-intro-to-express-response",
   "version": "1.0.0",
   "description": "10.1 Pursuit Lab",
-  "main": "app.js",
+  "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -21,6 +21,8 @@
   },
   "homepage": "https://github.com/tru-salomon/lab-intro-to-express-response#readme",
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "jest": "^29.7.0",
+    "supertest": "^6.3.3"
   }
 }
