--- a/package.json
+++ b/package.json
@@ -2,13 +2,14 @@
   "name": "lab-intro-to-express-response",
   "version": "1.0.0",
   "description": "Introduction to using the Express application",
-  "main": "app.js",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Yulonda Joy Wyatt",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^16.3.1",
     "express": "^4.18.2"
   }
 }
