--- a/package.json
+++ b/package.json
@@ -2,10 +2,11 @@
   "name": "lab-intro-to-express-response",
   "version": "1.0.0",
   "description": "Introduction to using the Express application",
-  "main": "server.js",
+  "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
   },
+  
   "author": "Yulonda Joy Wyatt",
   "license": "ISC",
   "dependencies": {
