--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Introduction to using the Express application",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   
   "author": "Yulonda Joy Wyatt",
